Implement complete vision and face recognition system with InsightFace
## Major Features Added

### 1. Visual Context System ✅
- Implemented GPT-4o Vision integration for real-time camera analysis
- Created VisualAwareAgent that automatically injects visual context into LLM
- Vision captures frames every 3 seconds and analyzes what user is doing
- Avatar can now see and describe user activities in real-time

### 2. Face Recognition with InsightFace ✅
- Migrated from face-recognition (dlib) to InsightFace for better accuracy
- 512-dimensional embeddings vs old 128-dimensional (99% vs 95% accuracy)
- Easy installation with no build dependencies
- Local SQLite database for face embeddings storage
- Automatic person recognition and greeting by name

### 3. Initial Greeting ✅
- Avatar now speaks first when user connects
- Greets in Arabic: "السلام عليكم! أهلاً بك في شركة أورنينا للذكاء الاصطناعي"
- No need to wait for user to speak first

### 4. LangGraph Workflow Visualization ✅
- Complete workflow diagram: Connection → Vision → Recognition → Response
- Shows entire avatar flow in visual format
- Helps understand system architecture

### 5. Comprehensive Pydantic Models ✅
- 30+ Pydantic models for type safety
- Models for: Users, Consultations, Inquiries, Conversations, Face Recognition
- Full validation with EmailStr, phone numbers, etc.

### 6. Docker Support ✅
- Dockerfile for backend (Python 3.11-slim)
- Dockerfile for frontend (Node 20-alpine)
- docker-compose.yml with Redis
- .dockerignore files for both services

## Files Added

- `insightface_recognition.py` - InsightFace-based face recognition
- `visual_aware_agent.py` - Custom agent with visual context injection
- `visual_context_models.py` - Pydantic models for visual context
- `models.py` - Comprehensive Pydantic models (30+ models)
- `avatar_workflow.py` - LangGraph workflow visualization
- `FACE_RECOGNITION_GUIDE.md` - Complete face recognition guide
- `INSIGHTFACE_MIGRATION.md` - Migration documentation
-

--- a/avatary/requirements.txt
+++ b/avatary/requirements.txt
@@ -10,3 +10,15 @@ requests
 python-dotenv
 pydantic-ai-slim[openai,cmp]
 pyaudio
+# Database and image processing
+supabase>=2.0.0
+Pillow>=10.0.0
+numpy>=1.24.0
+email-validator>=2.0.0
+# Face recognition with InsightFace
+insightface>=0.7.3
+onnxruntime>=1.23.0
+# Workflow visualization
+langgraph>=0.2.0
+langchain>=0.3.0
+graphviz>=0.20.0
