--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@livekit/components-react": "^2.0.0",
     "autoprefixer": "^10.4.16",
+    "framer-motion": "^12.23.24",
     "livekit-client": "^2.0.0",
     "livekit-server-sdk": "^2.14.0",
     "next": "^14.0.4",
