Fix: Remove API keys from committed files and update .gitignore
- Replace API keys with placeholder values in .env files
- Update .gitignore to explicitly ignore .env.docker and .env.production
- Create comprehensive .env.example files with proper placeholders
- Add backup files for reference (will be removed in next commit)

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@
 .env
 .env.local
 .env.*.local
+.env.docker
+.env.production
+frontend/.env.production
+frontend/.env.docker
 
 # Python
 __pycache__/
