--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,10 +1,5 @@
-# Frontend Environment Variables
-
-# ==========================================
-# LiveKit Configuration
-# ==========================================
-# Public - Used by frontend
-NEXT_PUBLIC_LIVEKIT_URL=ws://localhost:7880
+# Frontend Environment Variables Template
+# Copy this file to .env.local or .env.production and fill in your actual values
 
 # ==========================================
 # API Configuration
@@ -13,6 +8,34 @@ NEXT_PUBLIC_LIVEKIT_URL=ws://localhost:7880
 NEXT_PUBLIC_API_URL=http://localhost:3000
 NEXT_PUBLIC_AVATAR_API=http://localhost:8080
 NEXT_PUBLIC_CALLCENTER_API=http://localhost:8000
+
+# ==========================================
+# LiveKit Configuration
+# ==========================================
+# Public - Used by frontend
+NEXT_PUBLIC_LIVEKIT_URL=wss://your-livekit-url.livekit.cloud
+NEXT_PUBLIC_CALLCENTER_LIVEKIT_URL=wss://your-livekit-url.livekit.cloud
+
+# ==========================================
+# Supabase Configuration
+# ==========================================
+NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key
+
+# ==========================================
+# Tavus Configuration
+# ==========================================
+TAVUS_API_KEY=your_tavus_api_key
+
+# ==========================================
+# OpenAI Configuration (for server-side API routes)
+# ==========================================
+OPENAI_API_KEY=sk-your-openai-api-key
+
+# ==========================================
+# ElevenLabs Configuration (for server-side API routes)
+# ==========================================
+ELEVENLABS_API_KEY=sk_your_elevenlabs_api_key
 
 # ==========================================
 # Analytics (optional)
