--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,39 @@
-# Global Environment Variables for Docker Compose
+# ========================================
+# Environment Configuration Template
 # Copy this file to .env and fill in your actual values
+# ========================================
 
-# ==========================================
-# LiveKit Configuration (Used by all services)
-# ==========================================
-LIVEKIT_URL=ws://localhost:7880
+# API Configuration
+NEXT_PUBLIC_API_URL=http://localhost:8000
+
+# LiveKit Configuration (Client-side)
+NEXT_PUBLIC_LIVEKIT_URL=wss://your-livekit-url.livekit.cloud
+NEXT_PUBLIC_CALLCENTER_LIVEKIT_URL=wss://your-livekit-url.livekit.cloud
+
+# LiveKit Configuration (Server-side - for API routes)
 LIVEKIT_API_KEY=your_livekit_api_key
 LIVEKIT_API_SECRET=your_livekit_api_secret
+
+# Supabase Configuration
+NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key
+
+# Tavus Configuration
+TAVUS_API_KEY=your_tavus_api_key
+
+# OpenAI Configuration
+OPENAI_API_KEY=sk-your-openai-api-key
+
+# ElevenLabs Configuration
+ELEVENLABS_API_KEY=sk_your_elevenlabs_api_key
+
+# Database Configuration (if needed)
+DATABASE_URL=postgresql://user:password@host:port/database
+DATABASE_HOST=your-db-host
+DATABASE_PORT=5432
+DATABASE_NAME=your-db-name
+DATABASE_USER=your-db-user
+DATABASE_PASSWORD=your-db-password
 
 # ==========================================
 # Avatar Backend (avatary)
@@ -23,18 +50,9 @@ AVATAR_OPENAI_API_KEY=your_openai_api_key
 # Database (if using external database)
 CALLCENTER_DATABASE_URL=postgresql://user:password@localhost:5432/callcenter
 
-# Third-party APIs
-OPENAI_API_KEY=your_openai_api_key
-
 # Call Center Configuration
 CALLCENTER_MAX_AGENTS=10
 CALLCENTER_TIMEOUT=300
-
-# ==========================================
-# Frontend (Next.js)
-# ==========================================
-NEXT_PUBLIC_LIVEKIT_URL=ws://localhost:7880
-NEXT_PUBLIC_API_URL=http://localhost:3000
 
 # ==========================================
 # Redis Configuration
